projects/nx/src/apps/*sso/authelia/security/allow-from-traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-authelia-from-traefik
  annotations:
    networkpolicy.kubernetes.io/description: >-
      Allow ingress traffic from Traefik to Authelia pods on port 9091.
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions: # NOTE: This is a workaround to avoid Kustomization `labels` being applied to the NetworkPolicy
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - traefik-system
        - podSelector:
            matchExpressions: # NOTE: This is a workaround to avoid Kustomization `labels` being applied to the NetworkPolicy
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - traefik
      ports:
        - port: 9091
          protocol: TCP
